Miscellaneous cleanup; another try to fix comic sans on mobile

--- a/blaseball99/css/squid.css
+++ b/blaseball99/css/squid.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Comic Sans MS';
-  src: "images/comic.ttf";
+  src: url("../images/comic.ttf");
 }
 table
 {
